# fetiche-rs

./: .gitignore  Cargo.toml  ChangeLog  DESIGN.md  Makefile  Makefile.toml  Pipfile  README.md  VERSION.md  cliff.toml
acutectl/: Cargo.toml  Makefile.toml  README.md
acutectl/examples/: enum.rs
acutectl/macros/src/: lib.rs
acutectl/src/: acutectl.hcl  cli.rs  client.rs  config.hcl  config.rs  error.rs  init.rs  lib.rs  main.rs  task.rs
acutectl/src/cmds/: archive.rs  convert.rs  fetch.rs  import.rs  list.rs  mod.rs  stream.rs
acutectl/src/engine/: README.md  config.rs  job.rs  mod.rs  parse.rs  state.rs  storage.rs
acutectl/src/macros/: mod.rs
acutectl/tests/: cli-opts.rs
adsb-to-parquet/: Cargo.toml  README.md
adsb-to-parquet/benches/: csv-to-parquet.rs
adsb-to-parquet/examples/: df-csv.rs
adsb-to-parquet/src/: arrow2.rs  cli.rs  datafusion.rs  lib.rs  main.rs  types.rs
cat21conv/: Cargo.toml
cat21conv/src/: config.rs  lib.rs  task.rs
cat21conv/src/site/: asd.rs  mod.rs  safesky.rs
cat21conv/tests/: cli-opts.rs  filter-opts.rs
client/: Cargo.toml  README.md
client/src/: job.rs  lib.rs  local.rs  single.rs
common/: Cargo.toml
common/benches/: date_bench.rs  date_parsing.rs  div_expand.rs  expand.rs
common/examples/: altitude.rs  calculate.rs  canon.rs  cfg.rs  configactor.rs  dates.rs  enum.rs  expand.rs  local.hcl  parse.rs  sync-thread.rs  tokio-thread.rs  uuid_create.rs  version.rs  worker.rs
common/src/: config.rs  container.rs  containers.hcl  dateopts.rs  daterange.rs  lib.rs  location.rs  locations.hcl  logging.rs  macros.rs  runtime.rs
compute-height/: Cargo.toml  README.md
compute-height/src/: main.rs
compute-localtime/: Cargo.toml  README.md
compute-localtime/src/: main.rs
conv2cat21/: Cargo.toml  README.md
conv2cat21/src/: application.rs  commands.rs  config.rs  lib.rs  task.rs
conv2cat21/src/commands/: start.rs
conv2cat21/tests/: acceptance.rs
curves/: Cargo.toml
curves/examples/: traj.rs
curves/testdata/: points.csv
data/: sites.csv  (+5 more)
engine/: Cargo.toml  README.md
engine/benches/: read.rs  rotation.rs  timestamp.rs
engine/docs/: CodeReview.md
engine/examples/: actor.rs  async-simple.rs  auth.rs  convert.rs  dirs.rs  enum.rs  journeys.rs  parquet.rs  ractor.rs  rotation.rs  senhive-amqp.rs  simple.rs  sync-thread.rs  tls.rs  token.rs
engine/macros/: Cargo.toml
engine/macros/src/: lib.rs
engine/src/: auth.rs  cmds.hcl  cmds.rs  common.rs  config.rs  engine.hcl  error.rs  fetch.rs  filter.rs  into.rs  job.rs  lib.rs  parse.rs  queue.rs  read.rs  state.rs  stats.rs  storage.rs  stream.rs  subr.rs  task.rs  tokens.rs
engine/src/actors/: README.md  mod.rs  queue.rs  results.rs  runner.rs  scheduler.rs  sources.rs  state.rs  stats.rs  supervisor.rs  tokens.rs
engine/src/consumer/: archive.rs  mod.rs  save.rs  stdout.rs  store.rs
engine/src/database/: databases.hcl  mod.rs
engine/src/filter/: common.rs  convert.rs  mod.rs  tee.rs
engine/src/middle/: common.rs  convert.rs  tee.rs
engine/src/producer/: dummy.rs  fetch.rs  mod.rs  read.rs  stream.rs
engine/src/sources/: capability.rs  config.rs  error.rs  filter.rs  flow.rs  lib.rs  mod.rs  route.rs  site.rs  sources.hcl  sources.rs  stats.rs
engine/src/task/: archive.rs  cmds.hcl  common.rs  convert.rs  fetch.rs  into.rs  mod.rs  read.rs  record.rs  s3store.rs  save.rs  store.rs  stream.rs  tee.rs
fetch-sac/: Cargo.toml  README.md
fetch-sac/src/: cli.rs  main.rs  parse.rs  version.rs
fetiched/: Cargo.toml  README.md
fetiched/engine/: Cargo.toml
fetiched/engine/examples/: simple.rs
fetiched/examples/: async-simple.rs  enum.rs  simple.rs
fetiched/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
fetiched/src/actors/: ACTORS.md  config.rs  engine.rs  mod.rs  state.rs
fetiched/src/engine/: engine.hcl  error.rs  job.rs  mod.rs  parse.rs
format-specs/: Cargo.toml  README.md
format-specs/src/: aeroscope.rs  asd.rs  drone.rs  formats.hcl  influx.rs  lib.rs  main.rs  opensky.rs  safesky.rs
format-specs/src/asterix/: cat129.rs  cat21.rs  mod.rs
format-specs/src/input/: aeroscope.rs  asd.rs  mod.rs  opensky.rs  safesky.rs
format-specs/src/output/: aeroscope.rs  asd.rs  mod.rs  opensky.rs  safesky.rs
formats/: Cargo.toml  README.md
formats/benches/: dronepoint.rs
formats/examples/: README.md  adsb-ff.rs  asd.json  date.rs  de.rs  fa.rs  journeys.rs  parquet.rs  parquet2.rs  parquet25.rs  parquet3.rs  parquet_os.rs  today.json
formats/src/: aeroscope.rs  asd.rs  avionix.rs  common.rs  containers.hcl  drone.rs  dronepoint.rs  flightaware.rs  format.rs  formats.hcl  lib.rs  opensky.rs  parquet.rs  safesky.rs  senhive.rs
formats/src/asterix/: adsb.rs  cat129.rs  cat21.rs  mod.rs
import-adsb/: Cargo.toml  README.md
import-adsb/src/: cli.rs  config.rs  dbfile.hcl  dbfile.toml  main.rs
macros/: Cargo.toml  README.md
macros/examples/: config.rs
macros/src/: lib.rs
opensky-history/: Cargo.toml  README.md
opensky-history/examples/: version.rs
opensky-history/src/: cli.rs  init.rs  location.rs  locations.hcl  main.rs  segment.rs
process-data/: Cargo.toml  README.md
process-data/benches/: distances.rs
process-data/examples/: bbcheck.rs  calculate.rs  chdist.rs  date.rs  dist.rs  dist3d.rs  export.rs  export1.rs  export_installations.rs  insert.rs  kml.rs  site.rs  today.rs
process-data/src/: cli.rs  config.rs  error.rs  lib.rs  location.rs  locations.hcl  main.rs  process-data.hcl  record.rs  runtime.rs
raw-dump/: Cargo.toml
raw-dump/src/: cli.rs  fetch.rs  lib.rs  main.rs  task.rs
sites/: Cargo.toml
sites/src/: aeroscope.rs  asd.rs  config.hcl  config.rs  lib.rs  main.rs  opensky.rs  safesky.rs  site.rs
sources/: Cargo.toml  README.md
sources/benches/: dateparsing.rs  de.rs  read.rs
sources/examples/: asd.rs  convert.rs  date.rs  dirs.rs  ractor.rs  senhive-amqp.rs  sync-thread.rs  tls.rs  tokio-thread.rs
sources/src/: actors.rs  auth.rs  capability.rs  config.rs  error.rs  filter.rs  flow.rs  init.rs  lib.rs  macros.rs  main.rs  route.rs  site.rs  sources.hcl  sources.rs  token.rs
(+228 files in other folders)
