[workspace]
members = ["common", "engine", "fetiched", "formats", "sources", "acutectl", "process-data"]
default-members = ["acutectl", "process-data"]
exclude = ["adsb-to-parquet", "opensky-history"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["cargo", "derive"] }
criterion = { version = "0.5", features = ["async_tokio"] }
csv = "1.3"
datafusion = { version = "42.0", features = ["zstd", "async-compression", "serde"] }
dateparser = "0.2"
directories = "5"
env_logger = "0.11"
eyre = { version = "0.6", features = ["auto-install", "track-caller"] }
fetiche-common = { version = "0", path = "common" }
fetiche-engine = { version = "0", path = "engine" }
fetiche-formats = { version = "0", path = "formats" }
fetiche-macros = { version = "0", path = "macros" }
fetiche-sources = { version = "0", path = "sources" }
futures = "0.3"
hcl-rs = "0.18"
home = "0.5"
log = { version = "0.4", features = ["serde", "std"] }
nom = "7"
opentelemetry = { version = "0.26", features = ["logs", "metrics"] }
opentelemetry-otlp = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
polars = { version = "0.43", features = ["async", "serde", "lazy", "sql", "strings", "parquet", "json"] }
reqwest = { version = "0.12", features = ["blocking", "gzip", "json", "socks", "deflate"] }
rstest = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = { version = "3", features = ["base64", "chrono_0_4", "json", "hex"] }
strum = { version = "0.26", features = ["derive"] }
tabled = "0.16"
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-opentelemetry = "0.27"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "time", "tracing"] }
tracing-tree = { version = "0.4", features = ["time"] }
