[workspace]
members = ["common", "engine", "fetiched", "formats", "acutectl", "adsb-to-parquet", "process-data", "compute-height", 'compute-localtime']
default-members = ["acutectl", "process-data", "compute-height", "compute-localtime"]
exclude = ["opensky-history"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["cargo", "derive"] }
criterion = { version = "0.6", features = ["async_tokio", "async_futures"] }
csv = "1.3"
dateparser = "0.2"
directories = "6"
env_logger = "0.11"
eyre = { version = "0.6", features = ["auto-install", "track-caller"] }
fetiche-common = { version = "0", path = "common" }
fetiche-engine = { version = "0", path = "engine" }
fetiche-formats = { version = "0", path = "formats" }
fetiche-macros = { version = "0", path = "macros" }
futures = "0.3"
hcl-rs = "0.18"
jiff = { version = "0.2", features = ["serde"] }
nom = "7"
opentelemetry = { version = "0.26", features = ["logs", "metrics"] }
opentelemetry-otlp = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
polars = { version = "0.48", features = ["async", "serde", "lazy", "sql", "strings", "parquet", "json", "dtype-categorical"] }
ractor = { version = "0.15", features = ["async-trait", "serde"] }
reqwest = { version = "0.12", features = ["blocking", "gzip", "json", "socks", "deflate"] }
rstest = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = { version = "3", features = ["base64", "chrono_0_4", "json", "hex"] }
strum = { version = "0.27", features = ["derive"] }
tabled = "0.20"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }
tracing = "0.1"
tracing-opentelemetry = "0.27"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "time", "tracing"] }
tracing-tree = { version = "0.4", features = ["time"] }
