[workspace]
members = ["common", "client", "engine", "fetiched", "formats", "acutectl", "adsb-to-parquet", "process-data", "compute-height", 'compute-localtime']
default-members = ["acutectl", "process-data", "compute-height", "compute-localtime"]
exclude = ["opensky-history"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["cargo", "derive"] }
criterion = { version = "0.7", features = ["async_tokio", "async_futures"] }
csv = "1.3"
dateparser = "0.2"
directories = "6"
env_logger = "0.11"
eyre = { version = "0.6", features = ["auto-install", "track-caller"] }
fetiche-client = { version = "0", path = "client" }
fetiche-common = { version = "0", path = "common" }
fetiche-engine = { version = "0", path = "engine" }
fetiche-formats = { version = "0", path = "formats" }
fetiche-macros = { version = "0", path = "macros" }
futures = "0.3"
hcl-rs = "0.19"
jiff = { version = "0.2", features = ["serde"] }
nom = "8"
object_store = "0.12"
polars = { version = "0.50", features = ["async", "serde", "lazy", "sql", "strings", "parquet", "json", "dtype-categorical"] }
proptest = "1.7"
ractor = { version = "0.15", features = ["async-trait", "serde"] }
reqwest = { version = "0.12", features = ["blocking", "gzip", "json", "socks", "deflate"] }
rstest = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = { version = "3", features = ["base64", "chrono_0_4", "json", "hex"] }
strum = { version = "0.27", features = ["derive"] }
tabled = "0.20"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }
tracing = "0.1"
