[package]
name = "acutectl"
version = "0.17.1"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "CLI utility to fetch data."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["command-line-utilities", "aerospace::drones"]
keywords = ["ads-b", "aeronautical-data"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
chrono.workspace = true
clap.workspace = true
dateparser.workspace = true
env_logger.workspace = true
fetiche-formats.workspace = true
fetiche-sources.workspace = true
hcl-rs.workspace = true
home.workspace = true
log.workspace = true
nom.workspace = true
opentelemetry.workspace = true
opentelemetry-jaeger.workspace = true
opentelemetry_sdk.workspace = true
progress.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
strum.workspace = true
tabled.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true

datafusion = { version = "35", features = ["async-compression", "compression"] }
fetiche-macros = { version = "0", path = "../macros" }
clap_complete = "4.5"
percent-encoding = "2.3"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
tap = "1"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2.0"
httpmock = "0.7"
rstest = "0.18"

