[package]
name = "acutectl"
version = "0.24.99"
edition = "2024"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "CLI utility to fetch data."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["command-line-utilities", "aerospace::drones"]
keywords = ["ads-b", "aeronautical-data"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
flightaware = []

[dependencies]
eyre.workspace = true
clap.workspace = true
fetiche-common.workspace = true
fetiche-engine.workspace = true
fetiche-formats.workspace = true
fetiche-macros.workspace = true
hcl-rs.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

clap_complete = "4.5"
ctrlc = { version = "3.4", features = ["termination"] }
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2.0"

