[package]
name = "adsb-to-parquet"
version = "0.1.0"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Load ADS-B data as CSV and save it as Parquet."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones"]
keywords = ["parquet", "drones", "aeronautical-data", "ads-b"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
clap.workspace = true
eyre.workspace = true
log.workspace = true
opentelemetry.workspace = true
opentelemetry-jaeger.workspace = true
opentelemetry_sdk.workspace = true
parquet2.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true

arrow2 = { version = "0.18", features = ["io_csv", "io_json", "io_json_integration", "io_parquet", "simd"] }
rayon = "1.8"
