[package]
name = "adsb-to-parquet"
version = "0.2.0"
edition = "2024"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Load ADS-B data as CSV and save it as Parquet."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones"]
keywords = ["parquet", "drones", "aeronautical-data", "ads-b"]
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "csv-to-parquet"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
eyre.workspace = true
fetiche-common.workspace = true
polars.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

arrow2 = { version = "0.18", features = ["chrono-tz", "io_json", "io_csv", "io_parquet"] }
datafusion = { version = "49", features = ["zstd", "serde"] }
parquet2 = "0.17"
rayon = "1.10"

[dev-dependencies]
criterion.workspace = true
