[package]
name = "cat21conv"
version = "0.8.1"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "CLI utility to convert Aeronautical data into Cat21-like CSV."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/drone-gencsv"
categories = ["command-line-utilities", "aerospace::drones"]
keywords = ["cat21", "asterix", "drones", "aeronautical-data"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4", features = ["cargo", "derive"] }
csv = "1.1.6"
format-specs = { version = "0.8.1", path = "../format-specs" }
hcl-rs = "0.13.3"
home = "0.5.4"
log = { version = "0.4.17", features = ["serde", "std"] }
percent-encoding = "2.2.0"
reqwest = { version = "0.11.12", features = ["blocking", "gzip", "json", "serde_json", "socks", "deflate"] }
serde = { version = "1.0.156", features = [ "derive" ] }
serde_json = "1.0.86"
serde_repr = "0.1.10"
sites = { version = "0.3.0", path = "../sites" }
stderrlog = "0.5.4"

[dev-dependencies]
assert_cmd = "2.0"
httpmock = "0.6"
