[package]
name = "cat21conv"
version = "0.8.1"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "CLI utility to convert Aeronautical data into Cat21-like CSV."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/drone-gencsv"
categories = ["command-line-utilities", "aerospace::drones"]
keywords = ["cat21", "asterix", "drones", "aeronautical-data"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
csv = "1.1"
env_logger.workspace = true
fetiche-sources.workspace = true
fetiche-formats.workspace = true
hcl-rs.workspace = true
home.workspace = true
log.workspace = true
percent-encoding = "2"
reqwest = { version = "0", features = ["blocking", "gzip", "json", "serde_json", "socks", "deflate"] }
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
httpmock = "0.6"
