[package]
name = "fetiche-client"
version = "0.1.0"
edition = "2024"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Stub Engine component for Fetiche."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones"]
keywords = ["drones", "aeronautical-data", "ads-b"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
fetiche-common.workspace = true
fetiche-engine.workspace = true
fetiche-formats.workspace = true
futures.workspace = true
hcl-rs.workspace = true
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

derive_builder = "0.20"

[dev-dependencies]
proptest = "1.7"
