[package]
name = "fetiche-common"
version = "0.4.0"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Common library for fetiche modules."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones"]
keywords = ["drones", "aeronautical-data", "airplanes"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "date_bench"
harness = false

[[bench]]
name = "expand"
harness = false

[[bench]]
name = "div_expand"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
clap.workspace = true
csv.workspace = true
dateparser.workspace = true
directories.workspace = true
eyre.workspace = true
fetiche-macros.workspace = true
hcl-rs.workspace = true
jiff.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
ractor.workspace = true
serde.workspace = true
strum.workspace = true
tabled.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true

async-trait = "0.1"
divan = "0.1"
egm2008 = "0.1"
humantime = "2.1"
tracing-appender = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
enum_dispatch = "0.3"
rand = "0.9"
rstest.workspace = true
test-pretty-log = "0.6"