[package]
name = "conv2cat21"
authors = []
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["cargo", "derive"] }
chrono = { version = "0.4", features = ["serde"] }
format-specs = { version = "0", path = "../format-specs" }
thiserror = "1"
csv = "1.1"
hcl-rs = "0.14"
home = "0.5"
log = { version = "0.4", features = ["serde", "std"] }
percent-encoding = "2"
reqwest = { version = "0", features = ["blocking", "gzip", "json", "serde_json", "socks", "deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
sources = { version = "0.3", path = "../sources" }
stderrlog = "0.5"

[dependencies.abscissa_core]
version = "0.7.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.7.0", features = ["testing"] }
once_cell = "1.2"
assert_cmd = "2.0"
httpmock = "0.6"

