[package]
name = "curves"
version = "0.1.0"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = ""
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/drone-gencsv"
categories = ["command-line-utilities", "aerospace::drones"]
keywords = ["cat21", "asterix", "drones", "aeronautical-data"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
fetiche-sources.workspace = true
fetiche-formats.workspace = true
hcl-rs.workspace = true
home.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true

flo_curves = "0.7"

[dev-dependencies]
assert_cmd = "2.0"
