[package]
name = "curves"
version = "0.1.0"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = ""
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["command-line-utilities", "aerospace::drones"]
keywords = ["cat21", "asterix", "drones", "aeronautical-data"]
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
clap = "4.5.1"
log = "0.4.21"

csv = "1.3"
kurbo = "0.11.0"
serde = { version = "1.0.196", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
