[package]
name = "fetiche-engine"
version = "0.24.0"
edition = "2024"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Engine component for the Fetiche framework."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones"]
keywords = ["asterix", "drones", "aeronautical-data", "ads-b"]

[features]
default = ["asd", "senhive", "avionix"]
asd = []
asterix = []
avionix = []
flightaware = []
opensky = []
safesky = []
senhive = []
datafusion = ["dep:datafusion"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
env_logger.workspace = true
eyre.workspace = true
fetiche-common.workspace = true
fetiche-formats.workspace = true
fetiche-macros.workspace = true
fetiche-sources.workspace = true
hcl-rs.workspace = true
nom.workspace = true
polars.workspace = true
ractor.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tabled.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true

datafusion = { version = "43", features = ["zstd", "async-compression", "serde"], optional = true }
enum_dispatch = "0.3"

[dev-dependencies]
rstest.workspace = true
