[package]
name = "fetiche-engine"
version = "0.25.0"
edition = "2024"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Engine component for the Fetiche framework."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetiche-rs"
categories = ["aerospace::drones"]
keywords = ["drones", "aeronautical-data", "ads-b"]

[features]
default = ["asd", "senhive", "avionix", "aeroscope", "opensky"]
privacy = []
json = []

aeroscope = []
asd = []
avionix = []
flightaware = []
opensky = []
safesky = []
senhive = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "read"
harness = false

[[bench]]
name = "timestamp"
harness = false

[[bench]]
name = "rotation"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
clap.workspace = true
csv.workspace = true
eyre.workspace = true
fetiche-common.workspace = true
fetiche-formats.workspace = true
fetiche-macros.workspace = true
futures.workspace = true
hcl-rs.workspace = true
nom.workspace = true
object_store.workspace = true
polars.workspace = true
ractor.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tabled.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

base64_light = "0.1"
derive_builder = "0.20"
enum_dispatch = "0.3"
humantime = "2.2"
lapin = { version = "2.5", features = ["serde_json"] }
mini-moka = "0.10"
native-tls = "0.2"
percent-encoding = "2.3"
futures-util = "0.3"

[dev-dependencies]
criterion.workspace = true
dateparser.workspace = true
directories.workspace = true
jiff.workspace = true
rstest.workspace = true

ctrlc = "3.4"
divan = "0.1"
indicatif = "0.18"
test-pretty-log = "0.6"