[package]
name = "fetiched"
version = "0.3.0"
edition = "2021"
description = "Daemon component of Fetiche."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
fetiche-formats.workspace = true
fetiche-sources.workspace = true
hcl-rs.workspace = true
home.workspace = true
log.workspace = true
nom.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tabled.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

actix = "0.13"
actix-rt = "2.8"
tmpdir = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "v7"] }
opentelemetry = { version = "0.20", features = ["rt-tokio", "logs", "metrics"] }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
tracing-tree = { version = "0.2", features = ["time"] }
tracing-opentelemetry = "0.21.0"

engine-macros = { version = "0", path = "macros" }
actix-storage = "0.3"
actix-storage-dashmap = { version = "0.3.0", features = ["actor", "delay-queue"] }
dashmap = { version = "5.5.3", features = ["rayon", "arbitrary"] }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[dev-dependencies]
assert_cmd = "2.0"
rstest.workspace = true

