[package]
name = "fetiched"
version = "0.4.0"
edition = "2021"
description = "Daemon component of Fetiche."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
fetiche-common.workspace = true
fetiche-formats.workspace = true
fetiche-sources.workspace = true
hcl-rs.workspace = true
home.workspace = true
log.workspace = true
nom.workspace = true
opentelemetry.workspace = true
opentelemetry-jaeger.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tabled.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true

actix = "0.13"
actix-rt = "2.9"
actix-storage = { version = "0.3", features = ["serde", "serde-json", "serde-cbor"] }
actix-storage-dashmap = { version = "0.3", features = ["actor", "delay-queue"] }
dashmap = { version = "5.5", features = ["serde"] }
parquet = { version = "49.0", features = ["json", "async", "cli"] }
parquet_derive = "49.0"
tmpdir = "1.0"
tokio = { version = "1", features = ["full"] }

fetiche-macros = { version = "0", path = "../macros" }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[dev-dependencies]
assert_cmd = "2.0"
rstest.workspace = true

